# rrrrpc

./: CMakeLists.txt  README.md  README_DISTRIBUTED.md  build.sh
client/: rpc_client.cpp  rpc_client.h
common/: connection_pool.cpp  connection_pool.h  epoll_server.cpp  epoll_server.h  load_balancer.cpp  load_balancer.h  network.cpp  network.h  serializer.cpp  serializer.h  thread_pool.cpp  thread_pool.h
config/: distributed_registry_config.json  rpc_config.json
examples/: client_example.cpp  distributed_registry_example.cpp  registry_example.cpp  server_example.cpp
proto/: distributed_registry.proto  rpc_message.pb.cc  rpc_message.pb.h  rpc_message.proto  service.pb.cc  service.pb.h  service.proto
registry/: distributed_registry_server.cpp  distributed_registry_server.h  raft_node.cpp  raft_node.h  raft_node_rpc.cpp  raft_state_machine.cpp  raft_state_machine.h  registry_server.cpp  registry_server.h
scripts/: start_distributed_registry.sh  stop_distributed_registry.sh
server/: rpc_server.cpp  rpc_server.h
test/: run_tests.sh  simple_registry_test.cpp  test_discovery.cpp  test_distributed_registry.cpp
